[gd_scene load_steps=16 format=3 uid="uid://soguh4yny0f0"]

[ext_resource type="Script" uid="uid://bvvuks1qgil6" path="res://Scenes/Board/board.gd" id="1_ef5ss"]
[ext_resource type="TileSet" uid="uid://b77a7ss6h0c2m" path="res://new_tile_set.tres" id="2_qlllu"]
[ext_resource type="Texture2D" uid="uid://dix2h5m4t3c7e" path="res://assets/Our Assets/board.png" id="2_s2gku"]
[ext_resource type="Script" uid="uid://ckiog3kedx0ga" path="res://components/play_area.gd" id="3_dkvsl"]
[ext_resource type="Script" uid="uid://8s6aqpp1oiic" path="res://components/unit_grid.gd" id="3_ffhyd"]
[ext_resource type="Texture2D" uid="uid://bc55foimbjkw2" path="res://assets/Our Assets/travernkeeper.svg" id="4_csi2d"]
[ext_resource type="Texture2D" uid="uid://th841nl8m0hy" path="res://assets/Our Assets/Untitled-2.svg" id="4_s2gku"]
[ext_resource type="Script" uid="uid://d3pjknjfj6ynk" path="res://components/unit_mover.gd" id="6_7ohde"]
[ext_resource type="Script" uid="uid://cxcur3lg0d5d7" path="res://components/unit_spawner.gd" id="7_x1pfr"]
[ext_resource type="PackedScene" uid="uid://lqm5228wqvl6" path="res://Scenes/Sell Portal/sell_portal.tscn" id="8_qlllu"]
[ext_resource type="Resource" uid="uid://defp4jshbm1ep" path="res://data/player/player_stats.tres" id="9_me64r"]
[ext_resource type="PackedScene" uid="uid://cnhx7egcrqt28" path="res://Scenes/Tooltip/tooltip.tscn" id="11_gti8d"]
[ext_resource type="AudioStream" uid="uid://cwnis3uqvj52u" path="res://assets/Our Assets/Shop - Unit Bought.mp3" id="12_brcfe"]
[ext_resource type="PackedScene" uid="uid://ehcpt7j0kkj3" path="res://Scenes/ShopContainer/shop_container.tscn" id="12_dkxek"]
[ext_resource type="Resource" uid="uid://bn1waem751oqp" path="res://data/unit_pool/unit_pool.tres" id="13_brcfe"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_ef5ss")
metadata/_edit_lock_ = true

[node name="Visuals" type="Node2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Visuals"]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_s2gku")
expand_mode = 1
stretch_mode = 5

[node name="Necromancer" type="Sprite2D" parent="Visuals"]
position = Vector2(953, 912)
scale = Vector2(0.07, 0.07)
texture = ExtResource("4_s2gku")

[node name="Travernkeeper" type="Sprite2D" parent="Visuals"]
position = Vector2(955, 169)
scale = Vector2(0.07, 0.07)
texture = ExtResource("4_csi2d")

[node name="PlayerArea" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid")]
position = Vector2(513, 550)
tile_set = ExtResource("2_qlllu")
script = ExtResource("3_dkvsl")
unit_grid = NodePath("PlayerUnitGrid")

[node name="PlayerUnitGrid" type="Node2D" parent="PlayerArea"]
script = ExtResource("3_ffhyd")
size = Vector2i(6, 1)

[node name="HandArea" type="TileMapLayer" parent="." node_paths=PackedStringArray("unit_grid")]
position = Vector2(21, 779)
tile_set = ExtResource("2_qlllu")
script = ExtResource("3_dkvsl")
unit_grid = NodePath("HandUnitGrid")

[node name="HandUnitGrid" type="Node2D" parent="HandArea"]
script = ExtResource("3_ffhyd")
size = Vector2i(4, 1)

[node name="SellPortal" parent="." instance=ExtResource("8_qlllu")]
position = Vector2(212, 518)
unit_pool = ExtResource("13_brcfe")
player_stats = ExtResource("9_me64r")
metadata/_edit_lock_ = true

[node name="UnitMover" type="Node" parent="." node_paths=PackedStringArray("play_areas")]
script = ExtResource("6_7ohde")
play_areas = [NodePath("../PlayerArea"), NodePath("../HandArea")]

[node name="UnitSpawner" type="Node" parent="." node_paths=PackedStringArray("hand_area")]
script = ExtResource("7_x1pfr")
hand_area = NodePath("../HandArea")

[node name="Tooltip" parent="." instance=ExtResource("11_gti8d")]

[node name="ShopUI" type="CanvasLayer" parent="."]

[node name="ShopContainer" parent="ShopUI" instance=ExtResource("12_dkxek")]
offset_left = 531.0
offset_top = 321.0
offset_right = 947.0
offset_bottom = 416.0
scale = Vector2(2, 2)
unit_pool = ExtResource("13_brcfe")
player_stats = ExtResource("9_me64r")

[node name="BuySound" type="AudioStreamPlayer2D" parent="ShopUI"]
stream = ExtResource("12_brcfe")

[node name="Button" type="Button" parent="."]
offset_left = 1507.0
offset_top = 476.0
offset_right = 1549.0
offset_bottom = 502.0
scale = Vector2(5, 5)
text = "Fight"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
